--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">CS 273 Superheroes</string>
+    <!-- ACTIVITY_QUIZ.XML -->
     <string name="question">Question %1$d of %2$d</string>
     <string name="image_description">Image of the current superhero in the quiz</string>
     <string name="guess">Guess the %1$s</string>
+    <string name="incorrect_answer">Incorrect!</string>
+
+    <!-- ALERT DIALOG -->
+    <string name="results">%1$d guesses, %2$.2f%% correct</string>
+    <string name="reset_quiz">Reset Quiz</string>
 </resources>
